@@ -52,6 +52,7 @@
     <license-maven-plugin.version>4.6</license-maven-plugin.version>
     <beam.version>2.56.0</beam.version>
     <auto-value.version>1.11.0</auto-value.version>
+    <lombok.version>1.18.36</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -190,7 +191,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.36</version>
+      <version>${lombok.version}</version>
     </dependency>
 
     <dependency>
@@ -238,6 +239,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jspecify</groupId>
+      <artifactId>jspecify</artifactId>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
@@ -378,6 +385,7 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+          <fork>true</fork>
           <!-- To retain parameter names for compiled classes, this is needed for Spring framework
             with versions >= 6.1. See https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention
             for the details -->
@@ -385,7 +393,72 @@
           <compilerArgs>
             <!-- Enable access to the packages at compile time -->
             <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            <!-- Enabling ErrorProne;
+              see: https://errorprone.info/docs/installation
+            -->
+            <arg>-XDcompilePolicy=simple</arg>
+            <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=com.google.fhir.analytics</arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+            </arg>
           </compilerArgs>
+          <annotationProcessorPaths>
+            <!-- TODO: Check if we can avoid these paths; see here for why:
+              https://errorprone.info/docs/installation#using-error-prone-together-with-other-annotation-processors
+            -->
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>com.google.auto.value</groupId>
+              <artifactId>auto-value</artifactId>
+              <version>${auto-value.version}</version>
+            </path>
+            <path>
+              <groupId>org.mockito</groupId>
+              <artifactId>mockito-inline</artifactId>
+              <version>${mockito.version}</version>
+            </path>
+            <path>
+              <groupId>com.google.errorprone</groupId>
+              <artifactId>error_prone_core</artifactId>
+              <version>2.23.0</version>
+            </path>
+            <path>
+              <groupId>com.uber.nullaway</groupId>
+              <artifactId>nullaway</artifactId>
+              <version>0.10.15</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
@@ -393,9 +466,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <!-- Enable access to the packages at run time -->
-          <argLine>@{argLine} --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+          <!-- For illegal-access, see: https://github.com/google/error-prone/issues/1157#issuecomment-769289564 -->
+          <argLine>@{argLine} --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED  --illegal-access=permit</argLine>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 
